--- a/.github/workflows/qodana.yml
+++ b/.github/workflows/qodana.yml
@@ -17,6 +17,8 @@ jobs:
           fetch-depth: 0
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2022.2.2
+        env:
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
       
       - name: "Upload SARIF"
         uses: github/codeql-action/upload-sarif@v2
