deploy: ed81b3a2e1a709585a0dc2c5177b23418f79f9be

--- a/results/Code_Inspection/projectStructure/ProjectFingerprint.json
+++ b/results/Code_Inspection/projectStructure/ProjectFingerprint.json
@@ -1,13 +1,14 @@
 {
   "languages": [
     "JavaScript",
+    "XML",
+    ".gitignore (GitIgnore)",
     "EJS",
     "CSS",
     "SVG",
     "YAML",
     "Plain text",
     "Markdown",
-    ".gitignore (GitIgnore)",
     "JSON"
   ]
 }
